--- a/main.ipynb
+++ b/main.ipynb
@@ -1095,8 +1095,14 @@
     "##### Cluster 2. Customers with high annual income and high annual spend\n",
     "##### Cluster 3. Customers with low annual income and low annual spend\n",
     "##### Cluster 4. Customers with high annual income but low annual spend\n",
-    "##### Cluster 5. Customers low annual income but high annual spend"
+    "##### Cluster 5. Customers low annual income but high annual spend\\"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccca6a7f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
